# FreeCAD

cMake/FreeCAD_Helpers/: CheckInterModuleDependencies.cmake  InitializeFreeCADBuildOptions.cmake
src/Mod/: CMakeLists.txt
src/Mod/Part/App/: Geometry.cpp
src/Mod/PartDesign/Gui/: AppPartDesignGui.cpp  Command.cpp  Workbench.cpp
src/Mod/PartDesign/Gui/Resources/: Drawing.qrc  PartDesign.qrc
src/Mod/PartDesign/Gui/Resources/translations/: PartDesign_zh-CN.qm  PartDesign_zh-CN.ts  autoTranslate.bat
src/Mod/Sketcher/Gui/Resources/: Drawing.qrc
src/Mod/TechDraw/Gui/: CommandExtensionDims.cpp
src/Mod/ZzmDesign/: CMakeLists.txt  Init.py  InitGui.py  ZzmDesign.dox  ZzmDesignGlobal.h
src/Mod/ZzmDesign/App/: AppZzmDesign.cpp  CMakeLists.txt  PreCompiled.h
src/Mod/ZzmDesign/Gui/: AppZzmDesignGui.cpp  CMakeLists.txt  Command.cpp  Command2DGeometry.cpp  Command3DGeometry.cpp  PreCompiled.cpp  PreCompiled.h  Workbench.cpp  Workbench.h
src/Mod/ZzmDesign/Gui/Resources/: UpdateResources.bat  ZzmDesign.qrc
src/Mod/ZzmDesign/Gui/Resources/translations/: ZzmDesign_zh-CN.qm  ZzmDesign_zh-CN.ts  autoTranslate.bat
src/Tools/plugins/widget/debug/FreeCAD_widgets.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog  FreeCAD_widgets.lastbuildstate
